# CleanOps

./: README.md  cleaning_report.txt  pyproject.toml
.github/workflows/: workflow.yml
datasets/: hotel_reservations_codeonly.csv
src/: __init__.py  data_preprocessor.py  report_generator.py
src/cleanops/: __init__.py  data_preprocessor.py
test/: CleanOps Cleaning demo.ipynb  Test.ipynb  cleaned_data.xls  report.txt
