[project]
name = "datamedic"
version = "0.1.0"
description = "DataMedic: A simple data cleaning, fixing, and visualization toolkit."
authors = [
    { name = "Jave Melchor P. Odchigue",
              "Sodais M. Angni",
              "Rynzo Rapheal R. Ruiz",
              "Harold Hope Magtrayo",
              "Reymart Padillo"}
]

[build-system]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "MIT" }
keywords = ["data-cleaning", "pandas", "visualization", "eda", "pipeline"]

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "pathlib"
]

[project.urls]
Homepage = "https://github.com/odchigue25206/DataMedic"
Repository = "https://github.com/odchigue25206/DataMedic"
